--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "start": "codeglue --stage=development --mode=server"
   },
   "dependencies": {
+    "csv-parse": "^4.3.1",
     "drag-drop": "^4.2.0",
     "preact": "^8.2.7",
     "statgrab": "^1.2.0",
