--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "csv-parse": "^4.3.1",
     "drag-drop": "^4.2.0",
     "preact": "^8.2.7",
+    "preact-compat": "^3.18.4",
+    "recharts": "^1.4.2",
     "statgrab": "^1.2.0",
     "yaafloop": "^1.1.0"
   },
