--- a/package.json
+++ b/package.json
@@ -17,9 +17,10 @@
   "dependencies": {
     "csv-parse": "^4.3.1",
     "drag-drop": "^4.2.0",
+    "numeral": "^2.0.6",
     "preact": "^8.2.7",
     "preact-compat": "^3.18.4",
-    "numeral": "^2.0.6",
+    "precharts": "^1.4.0",
     "recharts": "^1.4.2",
     "statgrab": "^1.2.0",
     "yaafloop": "^1.1.0"
